src/objects/KanjoKamoku__c.object
<CustomObject>
    <description>Master Title Account</description>
    <fields>
        <fullName>BalanceKbn__c</fullName>
        <label>貸借</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>借方</fullName>
                </value>
                <value>
                    <fullName>貸方</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CreditDepartCode__c</fullName>
        <label>貸方部門コード</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreditTaxKbn__c</fullName>
        <label>貸税区分</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DebitDepartCode__c</fullName>
        <label>借方部門コード</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DebitTaxKbn__c</fullName>
        <label>借税区分</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KanjoHojocode__c</fullName>
        <label>補助科目コード</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KanjoHojoname__c</fullName>
        <label>補助科目名</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KanjocodeCode__c</fullName>
        <label>勘定科目コード</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Kanjocode__c</fullName>
        <label>Seq#</label>
        <length>8</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ShopInfoRef__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>店舗情報</label>
        <referenceTo>ShopInformation__c</referenceTo>
        <relationshipLabel>会計科目</relationshipLabel>
        <relationshipName>KanjoKamokuShopInfoRef</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>会計科目</label>
    <nameField>
        <label>会計科目名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>